# opengl

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/SettingUpWindow/: main.cpp
src/TriangleCreation/: main.cpp
